--- a/meetUS/res/layout/activity_main.xml
+++ b/meetUS/res/layout/activity_main.xml
@@ -1,70 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
- 
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="1.0"
-    android:background="@drawable/background"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:android1="http://schemas.android.com/apk/res/android"
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
+       android:background="@drawable/background"
+       android:gravity="center_horizontal"
+       android:orientation="vertical"
+       android:paddingBottom="@dimen/activity_vertical_margin"
+       android:paddingTop="@dimen/activity_vertical_margin"
+       android:weightSum="1.0" >
 
-    
     <ListView
         android:id="@+id/lvListe"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="300dip"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_weight="0.70"
+        android:background="#000000"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
-        android:background="#000000"
         android:listSelector="@drawable/list_selector" >
+
     </ListView>
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_weight="0.07" />
+        android:layout_height="8dp" />
 
-      <LinearLayout
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="2dp"
-          android:layout_marginRight="2dp"
-          android:layout_weight="0.70"
-          android:background="#FFFFFF"
-          android:orientation="horizontal"
-          android:weightSum="1.0" >
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android1:layout_gravity="center_horizontal"
+        android1:layout_weight="0.30"
+        android:background="#FFFFFF"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
-       
-        
         <Button
             android:id="@+id/ouSortir"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="135dp"
+            android:layout_height="70dp"
+            android1:layout_gravity="center_vertical"
+            android1:layout_weight="0.33"
+            android:hint="Où sortir?"
             android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:hint="Quand sortir?" />
-
+            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:textAlignment="center" />
+		
+        <View
+            android:id="@+id/Espace"
+            android:layout_width="18dp"
+            android:layout_height="50dp"
+            android1:layout_gravity="center_vertical" />
+        
         <Button
             android:id="@+id/dteSortie"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_width="135dp"
+            android:layout_height="70dp"
+            android1:layout_gravity="right|center_vertical"
+            android1:layout_weight="0.33"
+            android:hint="Quand sortir?"
             android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:layout_height="50dp"
-            android:hint="Quand sortir?" />
-        
-        <ImageView
-            android:id="@+id/test"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
-            android:contentDescription="@string/img_profil"
-            />
+            android:textAlignment="center" />
 
-    </LinearLayout> 
+    </LinearLayout>
 
 </LinearLayout>
