--- a/meetUS/res/menu/main.xml
+++ b/meetUS/res/menu/main.xml
@@ -1,5 +1,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+	
+   <!-- <item
+        android:id="@+id/menu_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_refresh"/>
+    <item
+        android:id="@+id/menu_help"
+        android:icon="@drawable/"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_help"/>
+    <item
+        android:id="@+id/menu_about"
+        android:icon="@drawable/ic_action_about"
+        android:showAsAction="never"
+        android:title="@string/menu_about"/>-->
+    
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
