--- a/meetUS/res/layout/list_row.xml
+++ b/meetUS/res/layout/list_row.xml
@@ -28,4 +28,12 @@
 		android:layout_alignParentRight="true"
         />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
