--- a/meetUS/res/layout/list_row.xml
+++ b/meetUS/res/layout/list_row.xml
@@ -43,7 +43,7 @@
         android:layout_below="@+id/textView1" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/datePickerButton"
         android:layout_width="wrap_content"
         android:layout_height="40dip"
         android:layout_alignBottom="@+id/picContent"
