--- a/meetUS/res/layout/list_row.xml
+++ b/meetUS/res/layout/list_row.xml
@@ -42,13 +42,12 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1" />
 
-  <!--    <Button
-        android:id="@+id/infoButton"
+    <TextView
+        android:id="@+id/idParty"
         android:layout_width="wrap_content"
         android:layout_height="40dip"
         android:layout_alignBottom="@+id/picContent"
         android:layout_alignRight="@+id/TextView01"
-        android:text="Info" />-->
-
-
+        android:visibility="invisible" />
+    
 </RelativeLayout>
